--- a/Destiny/public_html/css/Enemy/enemies.css
+++ b/Destiny/public_html/css/Enemy/enemies.css
@@ -46,6 +46,7 @@ input[type=text] {
     margin-right: 6%;
 }
 
+
     /* Table data */
 #tableDiv {
     height: 520px;
@@ -73,10 +74,12 @@ th, td{
     border: 1px solid black;
     color: black;
 }
-
-tr.highlighted {
-    background-color: yellow; /* или любой другой цвет */
+.over {
+  background-color: graytext; /* Темно-серый цвет */
+  color: #fff; /* Белый цвет текста, чтобы текст был виден на темном фоне */
+  /* Дополнительные стили по вашему желанию */
 }
+
 
     /* Bottom buttons */
 .Buttons {
