--- a/Destiny/public_html/css/Location/location.css
+++ b/Destiny/public_html/css/Location/location.css
@@ -48,7 +48,7 @@ body {
 #portrait {
     margin-left: 6%;
     margin-bottom: 6%;
-    width: 15%;
+    width: 27%;
 }
 .portraitData {
     font-size: 193%;
@@ -66,11 +66,8 @@ body {
     display: flex;
     align-items: center;
 }
-#labelItems {
+#labelEnemies {
     flex: 1; /* Это даст элементу labelItems возможность занимать оставшееся пространство */
-}
-#labelSpells {
-   flex: 1;
 }
 
 #tableDiv {
@@ -96,4 +93,8 @@ th, td{
     padding: 15px 20px;
     border: 1px solid black;
     color: black;
+}
+.over {
+  background-color: graytext; /* Темно-серый цвет */
+  color: #fff; /* Белый цвет текста, чтобы текст был виден на темном фоне */
 }
