--- a/Destiny/public_html/css/Character/character.css
+++ b/Destiny/public_html/css/Character/character.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../../img/bg.jpg");
+  background-image: url("../../img/menu.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
